--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,59 @@
 }
 
 .logo {
-  height: 6em;
+  height: 15em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  animation: slide-img 1s both;
 }
+
+@keyframes slide-img {
+  from {
+      transform: translateY(-1000px);
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.txt-logo {
+  animation: slide-txt 1s both;
+}
+
+@keyframes slide-txt {
+  from {
+      transform: translateY(-90px);
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.floating {  
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 15px); }
+  100%   { transform: translate(0, -0px); }    
+}
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #ff9900aa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #d8951faa);
 }
 
 @keyframes logo-spin {
@@ -33,8 +76,15 @@
   }
 }
 
-.card {
+.card-product {
   padding: 2em;
+  height: 350px;
+  background-color: rgb(255, 111, 0);
+}
+
+.img-product {
+  height: 50%;
+  width: 90%;
 }
 
 .read-the-docs {
